# lectures

base_compression_algoritms/source/: CMakeLists.txt  Compressor.cpp  Compressor.h  CompressorHuffman.cpp  CompressorHuffman.h  CompressorLZ77.cpp  CompressorLZ77.h  CompressorLZ78.cpp  CompressorLZ78.h  main.cpp
